tests/ui/pin-macro/cant_access_internals.stderr
error[E0658]: use of unstable library feature `unsafe_pin_internals`
  --> $DIR/cant_access_internals.rs:11:15
   |
LL |     mem::take(phantom_pinned.__pointer);
   |               ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(unsafe_pin_internals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
